@@ -5,13 +5,14 @@
 修復畫直線
 新增右下角簡易拖曳
 將 ArrayList 改成 HashMap
-改寫Undo
+改寫 Undo
 新增按 Delete 刪除物件
 新增其他圖形右下角縮放
 修復縮放BUG
 新增東、南兩個點
 新增西北、西南、東北三個點
 搞定八方位
-修復ReSize滑鼠游標BUG
+修復 ReSize 滑鼠游標BUG
 新增開啟檔案
 新增灰階化
+新增 MenuBar 圖片
